--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,6 +6,6 @@ jobs:
     steps:
       - run: npm --version
       - run: node --version
-      - users: actions/checkout@v4
+      - uses: actions/checkout@v4
       - run: npm install
       - run: node index.js
