--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,31 +1,49 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/configuration-reference
 version: 2.1
 
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/jobs-steps/#jobs-overview & https://circleci.com/docs/configuration-reference/#jobs
-jobs:
-  say-hello:
-    # Specify the execution environment. You can specify an image from Docker Hub or use one of our convenience images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/executor-intro/ & https://circleci.com/docs/configuration-reference/#executor-job
+executors:
+  node-executor:
     docker:
-      # Specify the version you desire here
-      # See: https://circleci.com/developer/images/image/cimg/base
-      - image: cimg/base:current
+      - image: circleci/node:16 # Use a Node.js image, make sure it matches your Node version
 
-    # Add steps to the job
-    # See: https://circleci.com/docs/jobs-steps/#steps-overview & https://circleci.com/docs/configuration-reference/#steps
+jobs:
+  test:
+    executor: node-executor
     steps:
-      # Checkout the code as the first step.
+      # Step 1: Checkout the repository
       - checkout
-      - run:
-          name: "Say hello"
-          command: "echo Hello, World!"
 
-# Orchestrate jobs using workflows
-# See: https://circleci.com/docs/workflows/ & https://circleci.com/docs/configuration-reference/#workflows
+      # Step 2: Install dependencies
+      - run:
+          name: Install Dependencies
+          command: npm install
+
+      # Step 3: Start the application in the background
+      - run:
+          name: Start Application
+          command: node index.js &
+
+      # Step 4: Wait for the application to start (sleep for 5 seconds)
+      - run:
+          name: Wait for Application to Start
+          command: sleep 5
+
+      # Step 5: Test the application using curl (output response)
+      - run:
+          name: Test Application with Curl
+          command: curl -v http://localhost:3000
+
+      # Step 6: Run the tests with verbose output
+      - run:
+          name: Run Tests
+          command: npm test --verbose
+
+      # Step 7: Store the test logs as artifacts
+      - store_artifacts:
+          path: test.log
+          destination: test_logs
+
 workflows:
-  say-hello-workflow: # This is the name of the workflow, feel free to change it to better match your workflow.
-    # Inside the workflow, you define the jobs you want to run.
+  version: 2
+  test:
     jobs:
-      - say-hello
+      - test
